--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
-    
-</head>
-<body>
-    <script src="script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Rock Paper Scissors</title>
+	</head>
+	<body>
+		<div class="btn">
+			<input type="button" value="Rock"></input>
+            <input type="button" value="Paper"></input>
+            <input type="button" value="Scissors"></input>
+		</div>
+		<div  style="margin-top: 20px" id="result"></div>
+		<script src="script.js" defer></script>
+	</body>
 </html>
